# flake8-no-english

./: LICENSE  README.md  pyproject.toml  setup.cfg
flake-8-no-english/: checker.py
flake8-no-english/: __init__.py  checker.py
flake8_no_english/: __init__.py  checker.py
flake8_only_english/: __init__.py  checker.py
tests/: conftest.py  test_checker.py
