[metadata]
name = flake8-non-english-comments
version = 0.1.0
description = Flake8 plugin to detect non-English comments and string literals
author = AlgorithmAlchemy
author_email = your@email.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlgorithmAlchemy/flake8-non-english-comments
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
    Framework :: Flake8
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
keywords = flake8, linter, comments, strings, non-english, ascii, code-quality, static-analysis, plugin, python,
readability, documentation, i18n, multilingual, regex

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    NL = flake8_non_english_comments.checker:NonEnglishChecker
